# youtube-analytics-project

./: pyproject.toml
helper/: youtube_api_manual.py
src/: channel.py  playlist.py  video.py
test/: test_channel.py  test_video.py
